--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+    <h1>Why I want to become a developer?</h1>
+	<p>
+		I want to be a software developer because I've worked hard
+		to develop skills that are relevant to this industry and 
+		because this type of work brings me personal satisfaction.
+		I'm excited to begin a career as a software developer and
+		learn more about this line of work from industry professionals.
+	</p>
 </body>
 
 </html>
